<!--
  Copyright 2022. Jaeun Kim (763k357@gmail.com) and Kanghee Kim(kim.kanghee@gmail.com) all rights reserved.
  added by ICHTHUS, Jaeeun Kim on 20221130
-->

<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ichthus_camera_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <build_depend>autoware_cmake</build_depend>

  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>rclcpp_components</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
